# MusicPlayerTUI

./: .gitignore  README.md  build.Dockerfile  launcher.py  nfpm.yaml  pyproject.toml
.agents/: mentor.md
.github/workflows/: release.yml
backend/: main.py  providers.py
backend/contexts/auth/: domain.py  router.py  services.py
backend/contexts/auth/use_cases/: __init__.py  yandex_flow.py
backend/contexts/catalog/: router.py
backend/contexts/playback/: router.py
backend/contexts/playback/domain/: queue_manager.py
backend/contexts/playback/use_cases/: get_queue.py  move_track.py  play_media.py
backend/contexts/search/: router.py
backend/infrastructure/config/: service.py
backend/infrastructure/players/: mpv.py
backend/infrastructure/yandex/: mapper.py  searcher.py  streamer.py  track_provider.py
docs/superpowers/plans/: 2026-04-30-code-refactoring.md  2026-04-30-interactive-sliders.md
docs/superpowers/specs/: 2026-04-30-interactive-sliders-design.md
scripts/: run.sh
shared/domain/: commands.py  common.py  entities.py  factories.py  interfaces.py  value_objects.py
shared/infrastructure/socket/: __init__.py  app.py  router.py
ui/: main.py
ui/infrastructure/: hotkeys.py
ui/utils/: socket_client.py
ui/viewmodels/: auth.py  base.py  catalog.py  player.py  queue.py  search.py
ui/views/: auth_screen.py  catalog_view.py  log_view.py  search_view.py
ui/views/statics/: app.tcss  auth_screen.tcss  log_panel.tcss  queue_drawer.tcss  search_view.tcss
ui/widgets/: player_bar.py  queue_drawer.py  sidebar.py  slider.py  visualizer.py
