[project]
name = "yandex-music-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dishka>=1.10.0",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "pynput",
    "python-mpv>=1.0.8",
    "textual>=8.2.4",
    "textual-dev>=1.8.0",
    "yandex-music[async]>=3.0.0",
]
