[project]
name = "yandex-music-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "dishka>=1.10.0",
  "loguru>=0.7.3",
  "pydantic>=2.13.3",
  "pynput",
  "python-mpv>=1.0.8",
  "textual>=8.2.4",
  "textual-dev>=1.8.0",
  "yandex-music[async]>=3.0.0",
]

[tool.ruff]

target-version = "py312"

line-length = 88

[tool.ruff.lint]

select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "DTZ",
  "PIE",
  "PT",
  "RET",
  "SIM",
  "TID",
  "ARG",
  "PTH",
  "PLE",
  "PLW",
  "RUF",
]

ignore = ["D", "ANN", "PLR0913", "ARG001", "ARG002", "RUF001", "RUF002", "RUF003"]

fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "ui", "shared"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "ARG001"]

[dependency-groups]
dev = ["ruff>=0.15.12"]
